fixed wrapping of conditions

--- a/src/App.css
+++ b/src/App.css
@@ -21,5 +21,7 @@
 }
 
 .condition-main {
+  display: inline-block;
+  white-space: nowrap;
   color: white;
 }
